--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "storybook-addon-responsive-columns",
+  "name": "storybook-addon-columns",
   "version": "0.0.0",
   "description": "A responsive, grid-based columns overlay.",
   "keywords": [
-    "columns", "grid", "layout", "storybook-addons"
+    "columns",
+    "grid",
+    "layout",
+    "storybook-addons"
   ],
   "repository": {
     "type": "git",
@@ -81,7 +84,15 @@
   "storybook": {
     "displayName": "Responsive Columns",
     "supportedFrameworks": [
-      "react", "vue", "angular", "web-components", "ember", "html", "svelte", "preact", "react-native"
+      "react",
+      "vue",
+      "angular",
+      "web-components",
+      "ember",
+      "html",
+      "svelte",
+      "preact",
+      "react-native"
     ],
     "icon": "https://user-images.githubusercontent.com/321738/63501763-88dbf600-c4cc-11e9-96cd-94adadc2fd72.png"
   }
