--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "storybook-addon-responsive-columns",
-  "version": "0.0.0",
+  "name": "@storybook/addon-responsive-columns",
+  "version": "1.0.0",
   "description": "A responsive, grid-based columns overlay.",
   "author": "Adam Fratino <hello@fratino.dev>",
   "keywords": [
@@ -9,7 +9,8 @@
     "guides",
     "layout",
     "design",
-    "storybook-addons"
+    "addon",
+    "storybook"
   ],
   "repository": {
     "type": "git",
@@ -96,6 +97,6 @@
       "preact",
       "react-native"
     ],
-    "icon": "https://user-images.githubusercontent.com/321738/63501763-88dbf600-c4cc-11e9-96cd-94adadc2fd72.png"
+    "icon": "https://github.com/adamfratino/storybook-addon-responsive-columns/blob/main/icon.png"
   }
 }
