--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@storybook/addon-responsive-columns",
+  "name": "storybook-addon-responsive-columns",
   "version": "1.0.0",
   "description": "A responsive, grid-based columns overlay.",
   "author": "Adam Fratino <hello@fratino.dev>",
