add storybook-addons to package keywords

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "layout",
     "design",
     "addon",
-    "storybook"
+    "storybook",
+    "storybook-addons"
   ],
   "repository": {
     "type": "git",
