--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addons": "^7.5.3",
     "@storybook/blocks": "^7.5.3",
     "@storybook/components": "^7.5.3",
     "@storybook/manager-api": "^7.5.3",
     "@storybook/preview-api": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
+    "@types/webpack-env": "^1.18.4",
     "auto": "^10.3.0",
     "babel-loader": "^8.1.0",
     "boxen": "^5.0.1",
