client-api useAddonState is deprecated, but useAddonState doesn't work in preview unless its this package

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@storybook/addons": "^7.5.3",
     "@storybook/api": "^7.5.3",
     "@storybook/blocks": "^7.5.3",
+    "@storybook/client-api": "^7.5.3",
     "@storybook/components": "^7.5.3",
-    "@storybook/manager-api": "^7.5.3",
     "@storybook/preview-api": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
